--- a/index.html
+++ b/index.html
@@ -168,10 +168,14 @@
         async function fetchAndCache(url) {
             try {
                 const cache = await caches.open(CACHE_NAME);
-                const cachedResponse = await cache.match(url);
+                let cachedResponse = await cache.match(url);
                 if (cachedResponse) return cachedResponse.url;
 
-                const response = await fetch(url, { mode: 'cors', cache: 'force-cache' });
+                const response = await Promise.race([
+                    fetch(url, { mode: 'cors', cache: 'force-cache' }),
+                    new Promise((_, reject) => setTimeout(() => reject(new Error('Timeout')), 8000))
+                ]);
+
                 if (response.ok) {
                     await cache.put(url, response.clone());
                     return url;
@@ -185,7 +189,10 @@
 
         async function isValidVideoUrl(url) {
             try {
-                const response = await fetch(url, { method: 'HEAD', mode: 'cors' });
+                const response = await Promise.race([
+                    fetch(url, { method: 'HEAD', mode: 'cors' }),
+                    new Promise((_, reject) => setTimeout(() => reject(new Error('Timeout')), 5000))
+                ]);
                 return response.ok;
             } catch {
                 return false;
@@ -228,12 +235,6 @@
             }
 
             async function createVideoElement(reel, index, isLast) {
-                const isValid = await isValidVideoUrl(reel.media);
-                if (!isValid) {
-                    console.log(`Skipping invalid/expired video: ${reel.media}`);
-                    return null;
-                }
-
                 const div = document.createElement('div');
                 div.className = 'video-container';
 
@@ -249,30 +250,39 @@
                 loader.className = 'video-loader';
                 div.appendChild(loader);
 
-                // Load all src upfront
-                video.src = await fetchAndCache(reel.media) || '';
+                const cachedUrl = await fetchAndCache(reel.media);
+                if (!cachedUrl || !(await isValidVideoUrl(cachedUrl))) {
+                    console.log(`Invalid video URL: ${reel.media}`);
+                    loader.style.display = 'block';
+                    loader.innerHTML = 'Video unavailable';
+                    setTimeout(() => {
+                        const nextVideo = document.querySelector(`video[data-index="${index + 1}"]`);
+                        if (nextVideo) nextVideo.scrollIntoView();
+                    }, 1500);
+                } else {
+                    video.src = cachedUrl;
+                }
 
-                video.addEventListener('canplay', () => {
+                video.addEventListener('canplaythrough', () => {
                     loader.style.display = 'none';
                     video.dataset.ready = 'true';
                     if (index === 0) {
                         video.play().catch(error => console.log("First video play error:", error));
-                        fullTitle = reel.title;
-                        title.innerText = reel.title;
-                        const profileData = getProfileById(reel.id);
-                        fetchAndCache(profileData.profile).then(cachedUrl => {
-                            profilePic.src = cachedUrl || "https://example.com/default-profile.jpg";
-                        });
-                        usernameText.innerText = profileData.username;
-                        verifyBadge.style.display = profileData.verified ? "inline" : "none";
+                        updateMetadata(reel);
                     }
                 });
+
                 video.addEventListener('waiting', () => {
                     if (video.dataset.ready !== 'true') loader.style.display = 'block';
                 });
-                video.addEventListener('error', () => {
+
+                video.addEventListener('error', (e) => {
                     loader.style.display = 'block';
-                    loader.innerHTML = 'Error';
+                    loader.innerHTML = 'Load failed';
+                    setTimeout(() => {
+                        const nextVideo = document.querySelector(`video[data-index="${index + 1}"]`);
+                        if (nextVideo) nextVideo.scrollIntoView();
+                    }, 1500);
                 });
 
                 video.addEventListener('click', () => {
@@ -299,15 +309,16 @@
             }
 
             async function loadVideos() {
-                if (currentReels.length === 0) return;
-
                 container.innerHTML = '';
                 for (let i = 0; i < currentReels.length; i++) {
                     const isLast = i === currentReels.length - 1;
-                    const videoElement = await createVideoElement(currentReels[i], i, isLast);
+                    const videoElement = await createVideoElement(currentReels[i], i, isLast)
+                        .catch(err => {
+                            console.log(`Video creation failed: ${err}`);
+                            return null;
+                        });
                     if (videoElement) container.appendChild(videoElement);
                 }
-
                 enableScrollPlayback();
             }
 
@@ -324,9 +335,20 @@
                 loadVideos();
             }
 
-            function enableScrollPlayback() {
-                let currentVideo = document.querySelector('video');
+            function updateMetadata(reel) {
+                fullTitle = reel.title;
+                title.innerText = reel.title;
+                const profileData = getProfileById(reel.id);
+                fetchAndCache(profileData.profile).then(cachedUrl => {
+                    profilePic.src = cachedUrl || "https://example.com/default-profile.jpg";
+                });
+                usernameText.innerText = profileData.username;
+                verifyBadge.style.display = profileData.verified ? "inline" : "none";
+                localStorage.setItem('lastSeenReelId', reel.id);
+            }
 
+            function enableScrollPlayback() {
+                let currentVideo = null;
                 const observer = new IntersectionObserver((entries) => {
                     entries.forEach(entry => {
                         const video = entry.target;
@@ -339,29 +361,24 @@
                             }
                             currentVideo = video;
                             video.muted = !isAudioEnabled;
-                            if (video.dataset.ready !== 'true') {
+                            if (video.dataset.ready !== 'true' && !video.src) {
                                 loader.style.display = 'block';
                             }
-                            video.play().catch(() => loader.style.display = 'block');
+                            video.play().catch(() => {
+                                loader.style.display = 'block';
+                                setTimeout(() => {
+                                    const nextVideo = document.querySelector(`video[data-index="${index + 1}"]`);
+                                    if (nextVideo) nextVideo.scrollIntoView();
+                                }, 1500);
+                            });
 
-                            // Update metadata
-                            fullTitle = video.dataset.title;
-                            title.innerText = video.dataset.title;
-                            const reel = currentReels.find(r => r.title === video.dataset.title);
-                            if (reel) {
-                                const profileData = getProfileById(reel.id);
-                                fetchAndCache(profileData.profile).then(cachedUrl => {
-                                    profilePic.src = cachedUrl || "https://example.com/default-profile.jpg";
-                                });
-                                usernameText.innerText = profileData.username;
-                                verifyBadge.style.display = profileData.verified ? "inline" : "none";
-                                localStorage.setItem('lastSeenReelId', reel.id);
-                            }
+                            const reel = currentReels[index];
+                            if (reel) updateMetadata(reel);
                         } else if (video !== currentVideo) {
                             video.pause();
                         }
                     });
-                }, { threshold: 0.5 });
+                }, { threshold: 0.7 });
 
                 document.querySelectorAll("video").forEach(video => observer.observe(video));
             }
