--- a/inde.html
+++ b/inde.html
@@ -24,7 +24,7 @@
             overflow-y: auto;
             scroll-snap-type: y mandatory;
             -webkit-overflow-scrolling: touch;
-            display: none; /* Hidden initially */
+            display: none;
         }
 
         .video-container {
@@ -34,3 +34,448 @@
             scroll-snap-align: start;
             flex-shrink: 0;
             background-color: #000;
+        }
+
+        video {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: block;
+            background-color: #000;
+        }
+
+        .video-loader {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 32px;
+            height: 32px;
+            border: 3px solid #fff;
+            border-top: 3px solid transparent;
+            border-radius: 50%;
+            animation: spin 0.8s linear infinite;
+            z-index: 10;
+            display: none;
+        }
+
+        @keyframes spin {
+            0% { transform: translate(-50%, -50%) rotate(0deg); }
+            100% { transform: translate(-50%, -50%) rotate(360deg); }
+        }
+
+        .fixed-overlay {
+            position: fixed;
+            bottom: 80px;
+            left: 15px;
+            width: calc(100% - 30px);
+            display: flex;
+            align-items: center;
+            padding: 10px;
+            background: transparent;
+        }
+
+        .profile-pic {
+            width: 45px;
+            height: 45px;
+            object-fit: cover;
+            border-radius: 50%;
+            border: 2px solid white;
+        }
+
+        .user-info {
+            margin-left: 10px;
+            color: white;
+        }
+
+        .username {
+            font-size: 16px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+        }
+
+        .verify-badge {
+            width: 16px;
+            height: 16px;
+            margin-left: 5px;
+        }
+
+        .title {
+            font-size: 14px;
+            opacity: 0.9;
+            position: fixed;
+            bottom: 40px;
+            left: 15px;
+            width: calc(100% - 30px);
+            color: white;
+            padding: 5px 10px;
+            background: transparent;
+            border-radius: 8px;
+            white-space: normal;
+            cursor: pointer;
+        }
+
+        .like-animation {
+            position: absolute;
+            width: 120px;
+            height: 120px;
+            opacity: 0;
+            transition: opacity 0.9s ease-in-out;
+        }
+
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background-color: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+            font-size: 24px;
+            z-index: 20;
+        }
+    </style>
+</head>
+<body>
+    <div id="loading-screen">Loading: 0%</div>
+    <div id="reels-container"></div>
+    
+    <div class="fixed-overlay">
+        <img class="profile-pic" id="profile-pic" src="">
+        <div class="user-info">
+            <div class="username" id="username">
+                <span id="username-text">Loading...</span>
+                <img class="verify-badge" id="verify-badge" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Twitter_Verified_Badge_Gold.svg/2048px-Twitter_Verified_Badge_Gold.svg.png">
+            </div>
+        </div>
+    </div>
+    
+    <div class="title" id="title" onclick="showFullTitle()">Loading...</div>
+
+    <script>
+        window.addEventListener('error', function (e) {
+            console.error('JavaScript Error:', e.message, 'at', e.filename, 'line', e.lineno, 'column', e.colno);
+            showError('A JavaScript error occurred. Check console for details.');
+        });
+
+        window.addEventListener('unhandledrejection', function (e) {
+            console.error('Unhandled Promise Rejection:', e.reason);
+            showError('An unexpected error occurred. Check console for details.');
+        });
+
+        let fullTitle = "";
+        let isAudioEnabled = localStorage.getItem('audioEnabled') === 'true';
+        const AUDIO_PERSISTENCE_DURATION = 30 * 60 * 1000;
+        const CACHE_NAME = 'reels-cache-v1';
+        let allReels = [];
+        let currentReels = [];
+        const VIDEOS_PER_BATCH = 5;
+        let currentBatchStart = 0;
+
+        function setAudioPersistence() {
+            localStorage.setItem('audioEnabled', 'true');
+            localStorage.setItem('audioTimestamp', Date.now());
+        }
+
+        function shouldKeepAudioEnabled() {
+            const timestamp = localStorage.getItem('audioTimestamp');
+            if (!timestamp) return false;
+            return Date.now() - parseInt(timestamp) < AUDIO_PERSISTENCE_DURATION;
+        }
+
+        if (shouldKeepAudioEnabled()) {
+            isAudioEnabled = true;
+        } else {
+            localStorage.removeItem('audioEnabled');
+            localStorage.removeItem('audioTimestamp');
+        }
+
+        async function fetchAndCache(url) {
+            try {
+                const cache = await caches.open(CACHE_NAME);
+                let cachedResponse = await cache.match(url);
+                if (cachedResponse) {
+                    console.log(`Cache hit for ${url}`);
+                    return cachedResponse.url;
+                }
+
+                const response = await fetch(url, { mode: 'cors', cache: 'force-cache' });
+                if (response.ok) {
+                    await cache.put(url, response.clone());
+                    console.log(`Fetched and cached ${url}`);
+                    return url;
+                }
+                console.error(`Fetch failed for ${url}`);
+                return null;
+            } catch (error) {
+                console.error(`Cache fetch failed for ${url}:`, error);
+                return null;
+            }
+        }
+
+        async function isValidVideoUrl(url) {
+            try {
+                const response = await fetch(url, { method: 'HEAD', mode: 'cors' });
+                return response.ok;
+            } catch {
+                return false;
+            }
+        }
+
+        function shuffleArray(array) {
+            for (let i = array.length - 1; i > 0; i--) {
+                const j = Math.floor(Math.random() * (i + 1));
+                [array[i], array[j]] = [array[j], array[i]];
+            }
+            return array;
+        }
+
+        async function updateLoadingScreen(percent, message = '') {
+            const loadingScreen = document.getElementById('loading-screen');
+            loadingScreen.textContent = `Loading: ${percent}% ${message}`;
+        }
+
+        async function showLoadingScreen() {
+            const loadingScreen = document.getElementById('loading-screen');
+            const reelsContainer = document.getElementById('reels-container');
+            loadingScreen.style.display = 'flex';
+            reelsContainer.style.display = 'none';
+        }
+
+        async function hideLoadingScreen() {
+            const loadingScreen = document.getElementById('loading-screen');
+            const reelsContainer = document.getElementById('reels-container');
+            loadingScreen.style.display = 'none';
+            reelsContainer.style.display = 'flex';
+        }
+
+        function showError(message) {
+            const container = document.getElementById('reels-container');
+            container.innerHTML = `<div style="color: white; text-align: center; padding-top: 50%;">${message}</div>`;
+            hideLoadingScreen();
+        }
+
+        Promise.all([
+            fetch('profiles.json').then(res => res.ok ? res.json() : Promise.reject('Profiles fetch failed')).catch(err => { console.error(err); return { profiles: [] }; }),
+            fetch('reels.json').then(res => res.ok ? res.json() : Promise.reject('Reels fetch failed')).catch(err => { console.error(err); return { reels: [] }; })
+        ])
+        .then(([profilesData, reelsData]) => {
+            console.log('Profiles and reels data fetched successfully:', profilesData, reelsData);
+            const profiles = profilesData.profiles || [];
+            allReels = reelsData.reels || [];
+            if (allReels.length === 0) {
+                throw new Error('No reels data available');
+            }
+            currentReels = shuffleArray([...allReels]);
+
+            const container = document.getElementById('reels-container');
+            const profilePic = document.getElementById('profile-pic');
+            const usernameText = document.getElementById('username-text');
+            const verifyBadge = document.getElementById('verify-badge');
+            const title = document.getElementById('title');
+
+            function getProfileById(id) {
+                return profiles.find(profile => profile.id === id) || { 
+                    username: "bot", 
+                    profile: "https://i.postimg.cc/3Rh3SjRb/image.jpg", 
+                    verified: true
+                };
+            }
+
+            async function createVideoElement(reel, index) {
+                console.log(`Creating video element for reel at index ${index}:`, reel);
+                const div = document.createElement('div');
+                div.className = 'video-container';
+
+                const video = document.createElement('video');
+                video.playsInline = true;
+                video.controls = false;
+                video.muted = !isAudioEnabled;
+                video.loop = true;
+                video.dataset.index = index;
+                video.dataset.title = reel.title;
+
+                const loader = document.createElement('div');
+                loader.className = 'video-loader';
+                div.appendChild(loader);
+
+                const cachedUrl = await fetchAndCache(reel.media);
+                if (!cachedUrl || !(await isValidVideoUrl(cachedUrl))) {
+                    console.error(`Invalid video URL: ${reel.media}`);
+                    return null;
+                }
+                video.src = cachedUrl;
+
+                video.addEventListener('loadstart', () => {
+                    loader.style.display = 'block';
+                    console.log('Video load started:', video.src);
+                });
+
+                video.addEventListener('canplay', () => {
+                    loader.style.display = 'none';
+                    console.log('Video can play:', video.src);
+                    if (index === 0) {
+                        video.play().catch(error => console.error("Initial play error:", error));
+                        updateMetadata(reel);
+                    }
+                });
+
+                video.addEventListener('waiting', () => {
+                    loader.style.display = 'block';
+                    console.log('Video waiting:', video.src);
+                });
+
+                video.addEventListener('playing', () => {
+                    loader.style.display = 'none';
+                    console.log('Video playing:', video.src);
+                });
+
+                video.addEventListener('error', (e) => {
+                    loader.style.display = 'block';
+                    loader.innerHTML = 'Load failed';
+                    console.error('Video error:', e, 'URL:', video.src);
+                });
+
+                video.addEventListener('click', () => {
+                    if (!isAudioEnabled) {
+                        isAudioEnabled = true;
+                        setAudioPersistence();
+                        document.querySelectorAll('video').forEach(v => v.muted = false);
+                        video.play().catch(error => console.error("Play error:", error));
+                    }
+                });
+
+                video.addEventListener('dblclick', (e) => {
+                    showLikeAnimation(div, e);
+                });
+
+                div.appendChild(video);
+                return div;
+            }
+
+            async function preloadInitialVideo() {
+                await showLoadingScreen();
+                await updateLoadingScreen(10, 'Fetching data...');
+                container.innerHTML = '';
+
+                if (currentReels.length === 0) {
+                    showError('No reels available to display.');
+                    return;
+                }
+
+                const reel = currentReels[0];
+                await updateLoadingScreen(50, 'Loading first video...');
+                const videoElement = await createVideoElement(reel, 0);
+
+                if (videoElement) {
+                    container.appendChild(videoElement);
+                    await updateLoadingScreen(100, 'Ready!');
+                    await hideLoadingScreen();
+                    enableScrollPlayback();
+                } else {
+                    showError('Failed to load the first video.');
+                }
+            }
+
+            async function preloadNextBatch(startIndex) {
+                const endIndex = Math.min(startIndex + VIDEOS_PER_BATCH, currentReels.length);
+                const batchReels = currentReels.slice(startIndex, endIndex);
+
+                for (let i = 0; i < batchReels.length; i++) {
+                    const reel = batchReels[i];
+                    const index = startIndex + i;
+                    const videoElement = await createVideoElement(reel, index);
+                    if (videoElement) {
+                        container.appendChild(videoElement);
+                    }
+                }
+            }
+
+            function updateMetadata(reel) {
+                fullTitle = reel.title;
+                title.innerText = reel.title;
+                const profileData = getProfileById(reel.id);
+                fetchAndCache(profileData.profile).then(cachedUrl => {
+                    profilePic.src = cachedUrl || "https://example.com/default-profile.jpg";
+                });
+                usernameText.innerText = profileData.username;
+                verifyBadge.style.display = profileData.verified ? "inline" : "none";
+                localStorage.setItem('lastSeenReelId', reel.id);
+            }
+
+            function enableScrollPlayback() {
+                let currentVideo = null;
+                const observer = new IntersectionObserver((entries) => {
+                    entries.forEach(entry => {
+                        const video = entry.target;
+                        const loader = video.parentElement.querySelector('.video-loader');
+                        const index = parseInt(video.dataset.index);
+
+                        if (entry.isIntersecting) {
+                            if (currentVideo && currentVideo !== video) {
+                                currentVideo.pause();
+                            }
+                            currentVideo = video;
+                            video.muted = !isAudioEnabled;
+
+                            const playPromise = video.play();
+                            if (playPromise !== undefined) {
+                                playPromise
+                                    .then(() => loader.style.display = 'none')
+                                    .catch(error => {
+                                        console.error("Play error:", error);
+                                        loader.style.display = 'block';
+                                    });
+                            }
+
+                            const reel = currentReels[index];
+                            if (reel) updateMetadata(reel);
+
+                            if (index >= currentBatchStart + VIDEOS_PER_BATCH - 2 && index < currentReels.length - 1) {
+                                currentBatchStart += VIDEOS_PER_BATCH;
+                                preloadNextBatch(currentBatchStart);
+                            }
+                        } else if (video !== currentVideo) {
+                            video.pause();
+                            loader.style.display = 'none';
+                        }
+                    });
+                }, { threshold: 0.7 });
+
+                const videos = document.querySelectorAll("video");
+                console.log(`Observing ${videos.length} videos`);
+                videos.forEach(video => observer.observe(video));
+            }
+
+            function showFullTitle() {
+                alert(fullTitle);
+            }
+
+            function showLikeAnimation(container, event) {
+                const heart = document.createElement('img');
+                heart.src = "https://png.pngtree.com/png-vector/20220428/ourmid/pngtree-smooth-glossy-heart-vector-file-ai-and-png-png-image_4557871.png";
+                heart.className = 'like-animation';
+                heart.style.left = `${event.clientX - 40}px`;
+                heart.style.top = `${event.clientY - 40}px`;
+                heart.style.opacity = 1;
+
+                container.appendChild(heart);
+                setTimeout(() => {
+                    heart.style.opacity = 0;
+                    container.removeChild(heart);
+                }, 500);
+            }
+
+            preloadInitialVideo();
+        })
+        .catch(error => {
+            console.error('Error loading data:', error);
+            showError('Failed to load reels data. Check your network or JSON files.');
+        });
+    </script>
+</body>
+</html>
